--- a/index.html
+++ b/index.html
@@ -13,56 +13,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <style>
-      body {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .square:after {
-        font-family: FontAwesome;
-        content: "\f28d";
-        font-weight: 900;
-        display: block;
-
-        animation: change 4s linear infinite;
-      }
-
-      @keyframes change {
-        0% {
-          font-family: FontAwesome;
-          content: "\f04d";
-          font-weight: 900;
-          font-size: 4rem;
-          color: yellow;
-          box-sizing: border-box;
-          box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.5);
-          margin-top: 1%;
-        }
-        50% {
-          font-family: FontAwesome;
-          content: "\f009";
-          font-weight: 900;
-          font-size: 8rem;
-          transform: rotate(180deg);
-          color: yellowgreen;
-          box-sizing: border-box;
-          box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.5);
-        }
-        100% {
-          font-family: FontAwesome;
-          content: "\f00a";
-          font-weight: 900;
-          font-size: 12rem;
-          transform: rotate(360deg);
-          color: olive;
-          box-sizing: border-box;
-          box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.5);
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="common.css" />
   </head>
   <body>
     <div class="square"></div>
